<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity" >


    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"

        />

    <Button
        android:id="@+id/checkherebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="550dp"
        android:layout_centerHorizontal="true"
        android:onClick="clicked"
        android:text="@string/firstbutto"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/Nameid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:shadowColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/ageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/ageHint"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/DOBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:hint="@string/dobHint"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/GroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:hint="@string/bloodGroupHint"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorAccent" />
</RelativeLayout>