<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/secondlayout"
    android:background="@drawable/back"
    tools:context=".Main2Activity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/weight"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="210dp"
        android:text="@string/height"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="120dp"
        android:autofillHints="@string/weightHint"
        android:ems="10"
        android:hint="@string/weightHint"
        android:inputType="numberSigned|text"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="240dp"
        android:autofillHints="@string/heightHint"
        android:ems="10"
        android:hint="@string/heightHint"
        android:inputType="numberSigned|text"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/getBMIbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:onClick="onClickbutton"
        android:text="@string/bmibutton"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_centerHorizontal="true"
        android:text="@string/defaultOutput"
        android:textSize="20sp" />
</RelativeLayout>